# ddd-py

./: .envrc  .gitignore  .pylintrc  README.md  Taskfile.yml  pyproject.toml
_tameshi/: a1.py  a2.py  adapter_ex.py  ariadne_sample.py  async1.py  async2.py  cls.py  db_api.py  redis_con.py  sample.graphql  test_sample.py
_tameshi/ariadne/: obj_map.py  signature.py  with_db.py
_tameshi/sqlalchemy/: cleanup.sql  conf.py  models.py  query_builder.py  query_bulder.py  schema_getter.py  tes.py  test.py  thread_safe.py  upsert.py
src/ddd_py/: __init__.py  __main__.py
src/ddd_py/app_ctx/: internal_api.py
src/ddd_py/app_ctx/common/: context.py  dependencies.py  types.py
src/ddd_py/app_ctx/common/types/: period.py
src/ddd_py/app_ctx/domain/: README.md
src/ddd_py/app_ctx/usecase/common/: dto.py  output_dto.py
src/ddd_py/app_ctx/usecase/find_post/: usecase.py
src/ddd_py/app_ctx/usecase/find_post_generate_request/: usecase.py
src/ddd_py/app_ctx/usecase/find_reaction/: usecase.py
src/ddd_py/app_ctx/usecase/find_reaction_preset/: __init__.py  usecase.py
src/ddd_py/app_ctx/usecase/find_user/: usecase.py
src/ddd_py/app_ctx/usecase/middleware/: middleware.py  port.py
src/ddd_py/app_ctx/usecase/retrieve_user/: __init__.py  error.py  usecase.py
src/ddd_py/auth_ctx/: README.md
src/ddd_py/auth_ctx/adapter/common/: oidc.py
src/ddd_py/auth_ctx/usecase/common/: dto.py
src/ddd_py/auth_ctx/usecase/google_login/: __init__.py  dto.py  error.py  port.py  usecase.py
src/ddd_py/auth_ctx/usecase/verify_user_session/: __init__.py  dto.py  error.py  usecase.py
src/ddd_py/common/adapter/mysql/: conftest.py  my_base.py  test_utils.py  types.py  utils.py
src/ddd_py/domain/post/post/: __init__.py  content.py  id.py  post.py  repository.py
src/ddd_py/domain/post/post_finder/: filtering_options.py  finder.py
src/ddd_py/domain/post_generate_request/post_generate_request/: __init__.py  error.py  keyword.py  post_generate_request.py
src/ddd_py/domain/post_generate_request/post_generate_request_finder/: __init__.py  filtering_options.py  finder.py
src/ddd_py/domain/reaction/reaction/: reaction.py  repository.py
src/ddd_py/domain/reaction/reaction_finder/: __init__.py  filtering_options.py  finder.py  sorting_options.py
src/ddd_py/domain/reaction_preset/reaction_preset/: content.py  reaction_preset.py
src/ddd_py/domain_sevice/post_generation_service/: port.py
tools/mysql/: docker-compose-local.yml  schema.sql
tools/sqldef/: Dockerfile
(+108 files in other folders)
