[project]
name = "ddd-py"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "ddd_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddd_py"]
