[project]
name = "ddd-py"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.28",
    "bcrypt>=4.1.2",
    "ipykernel>=6.29.3",
    "uvicorn[standard]>=0.28.0",
    "pytest>=8.1.1",
    "deepdiff>=6.7.1",
    "aiodataloader>=0.4.0",
    "ariadne>=0.23.0",
    "ulid-py>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "ddd_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddd_py"]

[tool.ruff.lint.isort]
known-first-party = ["ddd_py"] 
