[project]
name = "ddd-py"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.28",
    "bcrypt>=4.1.2",
    "uvicorn[standard]>=0.28.0",
    "pytest>=8.1.1",
    "deepdiff>=6.7.1",
    "aiodataloader>=0.4.0",
    "ariadne>=0.23.0",
    "ulid-py>=1.1.0",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.5",
    "pytest-asyncio>=0.23.6",
    "pytest-xdist>=3.5.0",
    "mypy>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "types-python-dateutil>=2.9.0.20240316",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "ddd_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddd_py"]

[tool.ruff.lint.isort]
known-first-party = ["ddd_py"] 

[tool.ruff]
ignore = ["F401"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
